# geopol

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  EXECUTIVE_PRIMER.md  README.md  RUN_GUIDE.md  TESTING_GUIDE.md  WORLDMONITOR_INTEGRATION.md  alembic.ini  docker-compose.yml  evaluate.py  forecast.py  geopol.md  pyproject.toml  requirements.txt  run_pipeline.py  test_deduplication.py  test_env_loading.py  test_fetch.py  test_fix.py  test_isotonic.py  test_prediction_store.py  test_sampling.py  test_temp_scaling.py
.planning/: INTEGRATION_REPORT.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  TECH_DEBT_AUDIT.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/archive/: v2.0-llama-cancelled.md
.planning/debug/: comparison-panel-forecast-fetch.md  globe-layers-broken.md  layer-state-not-independent.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/research/: ARCHITECTURE.md  ARCHITECTURE_ASSESSMENT.md  FEATURES.md  FRONTEND_REDESIGN.md  PITFALLS.md  STACK.md  STACK_V3.md  SUMMARY.md  TIRGN_TRAINING_OPTIMIZATION.md  WM_AS_REPOSITORY.md
alembic/: env.py
alembic/versions/: 20260301_002_pending_questions_and_daemon_type.py  20260301_1443_001_initial_schema.py  20260302_001_phase13_schema.py  20260303_004_forecast_requests_and_tsvector.py  20260304_005_polymarket_provenance.py  20260305_006_system_config.py  20260305_007_rss_feeds.py  20260306_008_polymarket_hardening.py  20260307_009_backtest_tables.py  20260308_010_seeding_tables.py  20260309_011_narrative_summary.py
config/: retraining.yaml
deploy/systemd/: geopol-daily-forecast.service  geopol-daily-forecast.timer  geopol-gdelt-poller.service  geopol-rss-daemon.service
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts
scripts/: acled_poller.py  advisory_poller.py  bootstrap.py  collect_training_data.py  convert_jax_to_pytorch.py  daily_forecast.py  e2e_forecast_test.py  forecast.py  gdelt_poller.py  infra-up.sh  preflight.py  retrain_tkg.py  rss_daemon.py  schedule_retraining.sh  train_tirgn.py  train_tkg.py  train_tkg_jax.py  train_tkg_jraph.py
src/: __init__.py  config.py  constants.py  deduplication.py  fetch_events.py  filtering.py  gdelt_client.py  logging_config.py  monitoring.py  pipeline.py  rate_limiter.py  sampling.py  settings.py
src/api/: __init__.py  app.py  deps.py  errors.py  log_buffer.py
src/backtesting/: __init__.py  evaluator.py  export.py  runner.py  schemas.py  temporal_index.py  weight_snapshot.py
src/bootstrap/: __init__.py  checkpoint.py  orchestrator.py  stages.py  validation.py
src/calibration/: __init__.py  explainer.py  isotonic_calibrator.py  prediction_store.py  priors.py  temperature_scaler.py  weight_loader.py  weight_optimizer.py
src/database/: __init__.py  connection.py  models.py  schema.sql  storage.py
src/db/: __init__.py  models.py  postgres.py  sqlite.py
src/embeddings/: __init__.py  rotate.py  test_rotate.py
src/evaluation/: __init__.py  benchmark.py  brier_scorer.py  calibration_metrics.py  drift_detector.py  evaluator.py  provisional_scorer.py
src/forecasting/: __init__.py  ensemble_predictor.py  forecast_engine.py  gemini_client.py  graph_pattern_extractor.py  graph_validator.py  models.py  output_formatter.py  rag_pipeline.py  reasoning_orchestrator.py  scenario_generator.py  tkg_predictor.py
src/ingest/: __init__.py  acled_poller.py  advisory_poller.py  advisory_store.py  article_processor.py  backfill.py  feed_config.py  gdelt_poller.py  rss_daemon.py
src/knowledge_graph/: __init__.py  boundary_resolver.py  cross_partition_query.py  cross_source_dedup.py  embedding_trainer.py  embeddings.py  entity_normalization.py  evaluation.py  graph_builder.py  persistence.py  (+29 more)
systemd/: geopol-daily-forecast.service  geopol-daily-forecast.timer  geopol-ingest.service  geopol-rss.service
tests/: test_api_hardening.py  test_bootstrap.py  test_boundary_resolver.py  test_calibration.py  test_cli.py  test_concurrent_db.py  test_cross_partition_query.py  test_daily_pipeline.py  test_ensemble.py  test_evaluation.py  test_forecast_persistence.py  test_gdelt_poller.py  test_partition_index.py  test_partition_manager.py  test_partitioned_graph.py  test_rag_integration.py  test_reasoning_orchestrator.py  test_rss_daemon.py  test_tirgn_model.py  test_tkg_backend_dispatch.py  test_tkg_integration.py  test_tkg_predictor.py  test_train_tirgn.py  test_uat_phase13.py
(+439 files in other folders)
