[project]
name = "geopol"
version = "0.1.0"
description = "AI-powered geopolitical forecasting system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # GDELT Data Access
    "gdeltdoc>=1.12.0",
    "gdelt>=0.1.14",
    # Data Processing
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "dask[complete]>=2023.0.0",
    # Environment & Scheduling
    "python-dotenv>=1.0.0",
    "schedule>=1.2.0",
    # HTTP & Networking
    "requests>=2.31.0",
    # Knowledge Graphs
    "networkx>=3.0",
    # Deep Learning
    "torch>=2.0.0",
    "typing_extensions>=4.0.0",
    "numpy>=1.24.0",
    # Vector Database
    "qdrant-client>=1.7.0",
    # Visualization and ML
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    # LLM Integration
    "google-genai>=1.0",
    "tenacity>=8.0",
    # Schema & Data Validation
    "pydantic>=2.0",
    "llama-index-core>=0.14.12",
    "chromadb>=1.4.0",
    "llama-index-vector-stores-chroma>=0.5.5",
    "llama-index-embeddings-huggingface>=0.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "I",  # isort
]
ignore = [
    "E501", # line-too-long (handled by black)
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
