[project]
name = "geopol"
version = "2.0.0-dev"
description = "AI-powered geopolitical forecasting system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core: API runtime (FastAPI + DB + HTTP)
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis[hiredis]>=5.0",
    "python-multipart>=0.0.9",
    "aiohttp>=3.9",
    "tenacity>=8.0",
    "python-dotenv>=1.0.0",
    "typing_extensions>=4.0.0",
    "numpy>=1.24.0",
    "cachetools>=5.3",
    "psutil>=5.9",
    "rapidfuzz>=3.14.3",
    "requests>=2.31.0",
    "networkx>=3.0",
    "wandb>=0.25.0",
]

[project.optional-dependencies]
# Training: TKG model training (torch, JAX, CUDA)
training = [
    "torch>=2.0.0",
    "jax[cuda12]>=0.6.2",
    "flax>=0.10.7",
    "optax>=0.2.6",
    "tensorboardX>=2.6",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "scipy>=1.11.0",
    "netcal>=1.3.5",
]
# LLM: forecast generation via Google Gemini + RAG
llm = [
    "google-genai>=1.0",
    "google-generativeai>=0.8.6",
    "llama-index-core>=0.14.12",
    "chromadb>=1.4.0",
    "llama-index-vector-stores-chroma>=0.5.5",
    "llama-index-embeddings-huggingface>=0.6.1",
    "qdrant-client>=1.7.0",
]
# Ingest: GDELT data collection + RSS feeds
ingest = [
    "gdeltdoc>=1.12.0",
    "gdelt>=0.1.14",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "dask[complete]>=2023.0.0",
    "schedule>=1.2.0",
    "feedparser>=6.0",
    "trafilatura>=2.0",
]
# All: local dev gets everything
all = [
    "geopol[training,llm,ingest]",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
observability = [
    "wandb>=0.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "I",  # isort
]
ignore = [
    "E501", # line-too-long (handled by black)
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
